# learn-rust-whilst-taking-chatgpt-to-the-extreme

./: .gitignore  README.md
sec04-rust-basics/ch35_fixed_size_variables/: Cargo.toml
sec04-rust-basics/ch35_fixed_size_variables/src/: main.rs
sec04-rust-basics/ch36_dynamic_sized_variables/: Cargo.toml
sec04-rust-basics/ch36_dynamic_sized_variables/src/: main.rs
sec04-rust-basics/ch38_closures/: Cargo.toml
sec04-rust-basics/ch39_num_literals_raw_stings/: Cargo.toml
sec05-intermediate-rust/ch43_enums_and_structs/: Cargo.toml
sec05-intermediate-rust/ch43_enums_structs_traits/: Cargo.toml
sec05-intermediate-rust/ch51_lifetimes/: Cargo.toml
sec05-intermediate-rust/ch53_pattern_matching/: Cargo.toml
sec05-intermediate-rust/ch56_async_api_call/: Cargo.toml
sec05-intermediate-rust/ch58_collections_revisited/: Cargo.toml
sec06-advanced-rust/ch60_declarative_macros/: Cargo.toml
sec06-advanced-rust/ch63_procedural_macros/: Cargo.toml
sec06-advanced-rust/ch67_smart_pointers/: Cargo.toml
sec07-web-server-template/ch74_web_template/: Cargo.toml
sec07-web-server-template/ch74_web_template/data/: database.json
sec07-web-server-template/ch74_web_template/src/: main.rs
sec08-auto-gpt-project/_building_ai_agents/ai-agent-with-rust/: Cargo.toml
sec08-auto-gpt-project/_building_ai_agents/ai-agent-with-rust/src/: errors.rs  main.rs
sec08-auto-gpt-project/_building_ai_agents/ai-agent-with-rust/src/ai_agents/: generic.rs  mod.rs  researcher.rs  writer.rs
sec08-auto-gpt-project/ch86_auto_gippity/: Cargo.toml
(+68 files in other folders)
