[package]
name = "ch74_web_template"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
actix-cors = "0.6.4"
async-trait = "0.1.68"