[package]
name = "ai-agent-with-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.23.4"
axum = { version = "0.7.4", features = ["macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
thiserror = "1.0.63"
tokio = "1.28.2"
